; ModuleID = '/home/carl/AnghaBench/RetroArch/griffin/extr_..libretro-commonfilenbionbio_linux.c_nbio_linux_cancel.c'
source_filename = "/home/carl/AnghaBench/RetroArch/griffin/extr_..libretro-commonfilenbionbio_linux.c_nbio_linux_cancel.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nbio_linux_t = type { i32, i32, i32 }
%struct.io_event = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @nbio_linux_cancel to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @nbio_linux_cancel(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.nbio_linux_t*, align 8
  %4 = alloca %struct.io_event, align 4
  store i8* %0, i8** %2, align 8
  %5 = load i8*, i8** %2, align 8
  %6 = bitcast i8* %5 to %struct.nbio_linux_t*
  store %struct.nbio_linux_t* %6, %struct.nbio_linux_t** %3, align 8
  %7 = load %struct.nbio_linux_t*, %struct.nbio_linux_t** %3, align 8
  %8 = icmp ne %struct.nbio_linux_t* %7, null
  br i1 %8, label %10, label %9

9:                                                ; preds = %1
  br label %24

10:                                               ; preds = %1
  %11 = load %struct.nbio_linux_t*, %struct.nbio_linux_t** %3, align 8
  %12 = getelementptr inbounds %struct.nbio_linux_t, %struct.nbio_linux_t* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = icmp ne i32 %13, 0
  br i1 %14, label %15, label %24

15:                                               ; preds = %10
  %16 = load %struct.nbio_linux_t*, %struct.nbio_linux_t** %3, align 8
  %17 = getelementptr inbounds %struct.nbio_linux_t, %struct.nbio_linux_t* %16, i32 0, i32 2
  %18 = load i32, i32* %17, align 4
  %19 = load %struct.nbio_linux_t*, %struct.nbio_linux_t** %3, align 8
  %20 = getelementptr inbounds %struct.nbio_linux_t, %struct.nbio_linux_t* %19, i32 0, i32 1
  %21 = call i32 @io_cancel(i32 %18, i32* %20, %struct.io_event* %4)
  %22 = load %struct.nbio_linux_t*, %struct.nbio_linux_t** %3, align 8
  %23 = getelementptr inbounds %struct.nbio_linux_t, %struct.nbio_linux_t* %22, i32 0, i32 0
  store i32 0, i32* %23, align 4
  br label %24

24:                                               ; preds = %9, %15, %10
  ret void
}

declare dso_local i32 @io_cancel(i32, i32*, %struct.io_event*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
